# ftxui-projects

./: CMakeLists.txt  runner.py
src/: src  viewfile.cpp
